# helene_demos

./: README.md
01-amadeus-pitr/: del.py
02-amadeus-streams/: .gitignore  change-stream-to-kafka.js  config.js  demostream.md  docker-compose.yml  loadgen.js  package-lock.json
03-thalesradar-introMDB/: 4 - Timeseries.md  loadObj.py  ts_schema.md
04-thales-k8s+upgrade-RBAC-QE/: .gitignore  1-Install.md  2-K8s overview.md  4-Roles.md
05-ec2-om-deployment+overview/: 1-Setup.md  2.Demo.md  automation_config.json  launch-hosts.sh  launch-om.sh  teardown-hosts.sh
06-AMPwalkthrough/: .gitignore
08-artium-modelindex-ts-search-voyageai/: 1 - Indexes & geo.md  2 - Aggregations.md  3 - Search.md  embeddevices.py  example.json  loadgen.py  semanticsearch.json  semanticsearchwithfilter.json
09-agentdemo-skillbadge/: main.py
1-amadeus-pitr/: demo.md  load.py
10-zonesharding/: customer.json  demo-data.json  demo.md
11-flightid-movecollection/: demo.md
12-iceberg/: Time+Travel.ipynb  docker-compose-spark.yml  readme.md
13-hybrid search/: walkthrough.md
14-atlas-failover/: continuous-insert.py  continuous-read.py  demo_failover.md  monitor.py
15-mcp-atlas-api/: run.md
2-amadeus-streams/: package.json  pnr.json
3-thalesradar-introMDB/: 1- Compass.md  2 - Compass - index.md  3 - Aggregs.md  loadTs.py  obj.json
4-thales-k8s+upgrade-RBAC-QE/: 3-Upgrade.md
5-ec2-om-deployment+overview/: .gitignore  0-initialREADME&notes.md  teardown-om.sh
6-AMPwalkthrough/: 1-Install.md  2-Prep.md  (+1 more)
9-agentdemo-skillbadge/: pyproject.toml  readme.md  state.py  tools.py
(+61 files in other folders)
