[project]
name = "ai-agents-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "langchain==0.3.24",
    "langchain-openai==0.3.14",
    "langgraph==0.3.31",
    "langgraph-checkpoint-mongodb==0.1.3",
    "pymongo==4.11.3",
    "voyageai==0.3.2",
]
